--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   webview_flutter: ^0.3.19+5
+  flutter_webview_plugin: ^0.3.10+1
+  flutter_icons: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
