--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   webview_flutter: ^0.3.19+5
   flutter_webview_plugin: ^0.3.10+1
   flutter_icons: ^1.0.0+1
+  flustars: ^0.2.6+1
 
 dev_dependencies:
   flutter_test:
