--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
-  webview_flutter: ^0.3.19+5
+#  webview_flutter: ^0.3.19+5
   flutter_webview_plugin: ^0.3.10+1
   flutter_icons: ^1.0.0+1
   flustars: ^0.2.6+1
@@ -33,6 +33,10 @@ dependencies:
   flutter_spinkit: ^3.0.0
   sqflite: ^0.12.2
   path_provider: ^0.4.1
+
+  toast: ^0.1.5
+  image_picker: ^0.6.3+4
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -52,36 +56,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/imgs/login_background.png
-     - assets/imgs/guohe_logo.jpg
-     - assets/imgs/hw.jpg
-     - assets/imgs/schoolbus1.png
-     - assets/imgs/schoolbus2.png
+     - assets/imgs/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
