--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: 3.0.8
-  shared_preferences: ^0.5.6+1
+  shared_preferences: ^0.5.6+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -37,6 +37,7 @@ dependencies:
   toast: ^0.1.5
   image_picker: ^0.6.3+4
   flutter_swiper: ^1.1.6
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
