--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   flutter_icons: ^1.0.0+1
   flustars: ^0.2.6+1
+#  giffy_dialog: ^1.7.0
+  awesome_dialog: ^0.1.3
+  flutter_beautiful_popup: ^1.5.0
 
   flutter_spinkit: ^3.0.0
   sqflite: ^0.12.2
