--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   toast: ^0.1.5
   image_picker: ^0.6.3+4
   flutter_swiper: ^1.1.6
-  url_launcher: ^5.4.2
+#  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
