--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   toast: ^0.1.5
   image_picker: ^0.6.3+4
   flutter_swiper: ^1.1.6
+  package_info: ^0.4.0+14
+  share: ^0.6.3+6
 #  url_launcher: ^5.4.2
 
 dev_dependencies:
