--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   package_info: ^0.4.0+14
   share: ^0.6.3+6
+  fl_chart: ^0.8.7
+
 #  url_launcher: ^5.4.2
 
 dev_dependencies:
