--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   package_info: ^0.4.0+14
   share: ^0.6.3+6
-#  url_launcher: ^5.4.2
+  url_launcher: ^5.2.7
 
 dev_dependencies:
   flutter_test:
