--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   share: ^0.6.3+6
   fl_chart: ^0.8.7
 
-#  url_launcher: ^5.4.2
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
