--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   package_info: ^0.4.0+14
   share: ^0.6.3+6
   fl_chart: ^0.8.7
+  umeng_analytics_plugin: ^1.0.2
 
   url_launcher: ^5.4.2
 
