--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,6 @@
 name: flutter_app
 description: A new Flutter application.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -19,33 +9,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: 3.0.8
-  shared_preferences: ^0.5.6+2
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  dio: 3.0.9
+  shared_preferences: ^0.5.6+3
+  cupertino_icons: ^0.1.3
   english_words: ^3.1.0
-  #  webview_flutter: ^0.3.19+5
   flutter_webview_plugin: ^0.3.10+1
   flutter_icons: ^1.0.0+1
   flustars: ^0.2.6+1
-  #  giffy_dialog: ^1.7.0
   awesome_dialog: ^0.1.3
   flutter_beautiful_popup: ^1.5.0
 
-  flutter_spinkit: ^3.0.0
-  sqflite: ^0.12.2
-  path_provider: ^0.4.1
+  flutter_spinkit: ^4.1.2+1
+  sqflite: ^1.3.0
+  path_provider: ^1.6.5
 
   toast: ^0.1.5
-  image_picker: ^0.6.3+4
+  image_picker: ^0.6.4
   flutter_swiper: ^1.1.6
   package_info: ^0.4.0+14
   share: ^0.6.3+6
   fl_chart: ^0.8.7
-  umeng_analytics_plugin: ^1.0.2
-
   url_launcher: ^5.4.2
+  cached_network_image: ^2.0.0
+  sy_flutter_qiniu_storage: ^0.1.4
 
 dev_dependencies:
   flutter_test:
