--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   url_launcher: ^5.4.2
   cached_network_image: ^2.0.0
   sy_flutter_qiniu_storage: ^0.1.4
+  umeng_analytics_plugin: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
