--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/imgs/
+    - assets/imgs/core/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
