--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: flutter_app
 description: A new Flutter application.
 
+# 标明版本号，例如3.0.0+5
+# 3.0.0 用于展示给用户
+# 5 用于实际判断版本号
 version: 3.0.0+1
 
 environment:
@@ -35,6 +38,7 @@ dependencies:
   umeng_analytics_plugin: ^1.0.2
   fluwx: ^2.0.2
   flutter_launcher_icons: ^0.7.4
+  flutter_xupdate: ^0.0.3
 
 
 dev_dependencies:
