--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
   dio: 3.0.9
   shared_preferences: ^0.5.6+3
   cupertino_icons: ^0.1.3
@@ -71,4 +74,5 @@ flutter:
     - assets/imgs/core/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+flutter_intl:
+  enabled: true
