--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 # 标明版本号，例如3.0.0+5
 # 3.0.0 用于展示给用户
 # 5 用于实际判断版本号
-version: 3.0.0+1
+version: 3.0.0+5
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -15,34 +15,42 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  dio: 3.0.9
-  shared_preferences: ^0.5.6+3
+  awesome_dialog: ^0.1.3
+
   cupertino_icons: ^0.1.3
+  cached_network_image: ^2.1.0+1
+
+  dio: 3.0.9
+
   english_words: ^3.1.0
+  extended_image: ^0.9.0
+
+  flutter_beautiful_popup: ^1.5.0
+  flutter_launcher_icons: ^0.7.4
+  flutter_spinkit: ^4.1.2+1
   flutter_webview_plugin: ^0.3.10+1
   flutter_icons: ^1.0.0+1
+  flutter_swiper: ^1.1.6
+  flutter_xupdate: ^0.0.3
   flustars: ^0.2.6+1
-  awesome_dialog: ^0.1.3
-  flutter_beautiful_popup: ^1.5.0
+  fluwx: ^2.0.2
+  fl_chart: ^0.8.7
 
-  flutter_spinkit: ^4.1.2+1
-  sqflite: ^1.3.0
+  image_picker: ^0.6.4
+
+  package_info: ^0.4.0+14
   path_provider: ^1.6.5
 
-  toast: ^0.1.5
-  image_picker: ^0.6.4
-  flutter_swiper: ^1.1.6
-  package_info: ^0.4.0+14
+  shared_preferences: ^0.5.6+3
   share: ^0.6.3+6
-  fl_chart: ^0.8.7
-  url_launcher: ^5.4.2
-  cached_network_image: ^2.1.0+1
+  sqflite: ^1.3.0
   sy_flutter_qiniu_storage: ^0.1.4
-  umeng_analytics_plugin: ^1.0.2
-  fluwx: ^2.0.2
-  flutter_launcher_icons: ^0.7.4
-  flutter_xupdate: ^0.0.3
 
+
+  toast: ^0.1.5
+
+  umeng_analytics_plugin: ^1.0.2
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
