--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   sqflite: ^1.3.1
   sy_flutter_qiniu_storage: ^0.2.1
   toast: ^0.1.5
-  umeng_analytics_plugin: ^1.0.3
+#  umeng_analytics_plugin: ^1.0.3
   url_launcher: ^5.5.0
 
 dev_dependencies:
