--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
     sdk: flutter
 
   awesome_dialog: ^1.1.3
+  amap_location: ^0.2.0
 
   cupertino_icons: ^0.1.3
   cached_network_image: ^2.2.0+1
   dio: 3.0.9
-  english_words: ^3.1.5
   extended_image: ^0.9.0
   flutter_beautiful_popup: ^1.5.0
   flutter_launcher_icons: ^0.7.5
@@ -33,15 +33,14 @@ dependencies:
   fluwx: ^2.2.0
   fl_chart: ^0.10.1
   image_picker: ^0.6.7+4
-  location: ^3.0.0
   package_info: ^0.4.1
   path_provider: ^1.6.11
+  permission_handler: ^5.0.1+1
   shared_preferences: ^0.5.8
   share: ^0.6.4+3
   sqflite: ^1.3.1
   sy_flutter_qiniu_storage: ^0.2.1
   toast: ^0.1.5
-#  umeng_analytics_plugin: ^1.0.3
   url_launcher: ^5.5.0
 
 dev_dependencies:
@@ -49,9 +48,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  image_path: "assets/imgs/logo.jpg"
-  image_path_ios: "assets/imgs/logo.jpg"
-  android: true
+  image_path: "assets/imgs/logo.png"
+  image_path_ios: "assets/imgs/logo.png"
+  android: "logo"
   ios: true # can specify file name here e.g. "My-Launcher-Icon"
 #  adaptive_icon_background: "assets/images/christmas-background.png" # only available for Android 8.0 devices and above
 #  adaptive_icon_foreground: "assets/images/icon-foreground-432x432.png" # only available for Android 8.0 devices and above
