--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 # 标明版本号，例如3.0.0+5
 # 3.0.0 用于展示给用户
 # 5 用于实际判断版本号
-version: 3.0.2+7
+version: 3.0.3+8
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -33,11 +33,10 @@ dependencies:
   fl_chart: ^0.10.1
   image_picker: ^0.6.7+4
   package_info: ^0.4.1
-  path_provider: ^1.6.11
   permission_handler: ^5.0.1+1
   shared_preferences: ^0.5.8
   share: ^0.6.4+3
-  sqflite: ^1.3.1
+#  sqflite: ^1.3.1
   sy_flutter_qiniu_storage: ^0.2.1
   toast: ^0.1.5
   url_launcher: ^5.5.0
@@ -65,6 +64,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: IconFont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
 
   # To add assets to your application, add an assets section, like this:
   assets:
